# mecab

./: .gitignore  README.md  config.toml  mecab.cfg
.github/: build-wheel-linux.sh  build-wheel-macos.sh  build-wheel-many-linux.sh  build-windows.bat  cygwin-shell.bat  mecabrc  setup-darwin.sh  update-docs.sh
.github/workflows/: codeql-analysis.yml  docker.yml  realease.yml  release.yml  test-cygwin.yml  test-darwin-ipadic.yml  test-darwin-java.yml  test-darwin-jumandic.yml  test-darwin-perl.yml  test-darwin-python.yml  test-darwin-ruby.yml  test-darwin.yml  test-linuc-python.yml  test-linux-ipadic.yml  test-linux-java.yml  test-linux-jumandic.yml  test-linux-perl.yml  test-linux-python.yml  test-linux-ruby.yml  test-linux.yml  test-mingw.yml  test-windows.yml  test.yml  update-docs.yml
content/: _index.md  bindings.md  dic.md  feature.md  format.md  learn.md  libmecab.md  posid.md  soft.md
docs/: Makefile.in  bindings.html  dic-detail.html  dic.html  feature.html  format.html  index.html  learn.html  libmecab.html  mecab.cfg  mecab.css  mecab.html  partial.html  posid.html  soft.html  unk.html
docs/doxygen/: annotated.html  classMeCab_1_1Allocator.html  classMeCab_1_1Lattice-members.html  classMeCab_1_1Lattice.html  classMeCab_1_1Model-members.html  classMeCab_1_1Model.html  classMeCab_1_1Tagger-members.html  files.html  (+24 more)
layouts/: index.html
mecab/: .gitignore  Makefile.am  Makefile.in  aclocal.m4  autogen.sh  config.h.in  config.toml  configure  configure.ac  mecab-config.bat.in  mecab-config.in
mecab-ipadic/: Makefile.am  Makefile.in  configure  configure.ac
mecab-jumandic/: AuxV.csv  Makefile.am  Makefile.in  autogen.sh  configure  configure.ac  left-id.def
mecab/content/: _index.md  dic-detail.md  dic.md  libmecab.md  mecab.md  partial.md  unk.md
mecab/csharp/: DictionaryInfo.cs  Lattice.cs  MeCab.cs  MeCabPINVOKE.cs  MeCab_wrap.cxx  Model.cs  Node.cs  Path.cs  Tagger.cs
mecab/doc/: Makefile.in  bindings.html  dic.html  feature.html  format.html  index.html  learn.html  mecab.html  partial.html  posid.html  soft.html  unk.html
mecab/doc/doxygen/: annotated.html  classMeCab_1_1Allocator.html  classMeCab_1_1Lattice-members.html  classMeCab_1_1Lattice.html  classMeCab_1_1Model-members.html  classMeCab_1_1Model.html  classMeCab_1_1Tagger-members.html  classMeCab_1_1Tagger.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_eval.html  globals_func.html  globals_type.html  index.html  mecab_8h.html  mecab_8h_source.html  menudata.js  namespaceMeCab.html  namespacemembers.html  namespacemembers_func.html  namespacemembers_type.html  namespaces.html  structmecab__dictionary__info__t-members.html  structmecab__dictionary__info__t.html  structmecab__node__t-members.html  structmecab__node__t.html  structmecab__path__t-members.html  structmecab__path__t.html
mecab/java/: Makefile  Makefile.am  MeCab_wrap.cxx  autogen.sh  configure.ac
mecab/java/org/chasen/mecab/: DictionaryInfo.java  Lattice.java  MeCab.java  MeCabConstants.java  MeCabJNI.java  Model.java  Node.java  Path.java  Tagger.java
mecab/man/: Makefile.in  mecab.1
mecab/perl/: Makefile.PL  MeCab.pm  MeCab_wrap.cxx  test.pl
mecab/python/: MeCab.py  MeCab_wrap.cxx  README.md  pyproject.toml  setup.py  test.py
mecab/ruby/: MeCab_wrap.cpp
mecab/src/: Makefile.am  Makefile.in  Makefile.msvc  Makefile.msvc.in  char_property.cpp  common.h  connector.cpp  connector.h  darts.h  dictionary.cpp  eval.cpp  feature_index.cpp  iconv_utils.cpp  learner.cpp  learner_tagger.cpp  libmecab.cpp  libmecab.pc.in  mecab.h  mmap.h  param.cpp  shlex.cpp  shlex.h  string_buffer.h  tagger.cpp  thread.h  tokenizer.cpp  tokenizer.h  utils.cpp  utils.h  viterbi.cpp  winmain.h  writer.cpp
mecab/static/: mecab.css
mecab/swig/: Makefile
mecab/tests/: Makefile.in  run-cost-train.sh  run-dics.sh  run-eval.sh
(+14 files in other folders)
